Fix overlaps and padding on data page

--- a/themes/base-hugo-theme/assets/scss/base_type.scss
+++ b/themes/base-hugo-theme/assets/scss/base_type.scss
@@ -119,6 +119,9 @@ select {
     margin-left: 0;
     padding-left: 0;
     @include media-breakpoint-up(md) {
+      font-size: 4.4rem;
+    }
+    @include media-breakpoint-up(xl) {
       font-size: 5rem;
     }
     color: #6247AA;
