--- a/themes/base-hugo-theme/assets/scss/site_specific.scss
+++ b/themes/base-hugo-theme/assets/scss/site_specific.scss
@@ -212,7 +212,7 @@ body.data {
     background-color: #F4FCFB;
     }
     main {
-        padding-bottom: 224px;
+        padding-bottom: 128px;
     }
     .select-label {
        margin-bottom: -3px;
